done with updateUserProfile controller and update swagger
